--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -88,13 +88,13 @@ H_t = \left(1-\frac{1}{2N} \right)^tH_0
 i.e. the expected heterozygosity with our population is decaying
 geometrically with each passing generation. If we assume that $\nicefrac{1}{(2N)}
 \ll 1$ then we can approximate this geometric decay by an exponential
-decay, such that
+decay (see Question \ref{geo_question} below), such that
 %
 \begin{equation}
 H_t =H_0 \exp \left(-\frac{t}{2N} \right)  
 \end{equation}
 %
-i.e. heterozygosity decays exponentially at a rate $\nicefrac{1}{(2N)}.
+i.e. heterozygosity decays exponentially at a rate $\nicefrac{1}{(2N)}$.
 
 Note how this picture of decreasing heterozygosity is in contrast to the
 consistency of Hardy--Weinberg equilibrium of the previous chapter. Here, the
@@ -118,9 +118,9 @@ maintain to meet this goal?  (Note that while these numbers are made up, this
 is similar to the calculations being carried out by conservation biologists).
 \end{question}
 
-\begin{question} In mathematical population genetics, a commonly used
-  approximation $(1-x) \approx e^{-x}$ for $x << 1$ (this follows from the
-    Taylor series expansion of $\exp(-x)$ ignoring second order terms of $x$.
+\begin{question} \label{geo_question} In mathematical population genetics, a commonly used
+  approximation $(1-x) \approx e^{-x}$ for $x << 1$ (formally this follows from the
+    Taylor series expansion of $\exp(-x)$ ignoring second order terms of $x$).
     This is especially useful for approximating a geometric decay process by an
     exponential decay process, e.g. $(1 - x)^t \approx e^{-xt}$. Using R, check
     how good of an approximation this is for three values of x, $x = 0.5, 0.1,
@@ -128,7 +128,9 @@ is similar to the calculations being carried out by conservation biologists).
     exponential decay as a curve, using different colors for each of these
     three values. Note that you should have a discrete timescale for the
     geoemtric decay (e.g. using \texttt{seq(0, 18)}) and a near continous scale
-    for the exponential decay (e.g. using \texttt{seq(0, 18, length.out=100)}.
+    for the exponential decay (e.g. using \texttt{seq(0, 18,
+      length.out=100)}. Print off some of your your graphs and hand
+    them in. 
 
     % max <- 18; x <- seq(0, max); x1 <- seq(0, max, length.out=100); plot(x, (1-0.5)^x, col='purple', pch=19); lines(x1, exp(-0.5*x1), col='purple'); points(x, (1-0.1)^x, pch=19, col='orange'); lines(x1, exp(-0.1*x1), col='orange'); points(x, (1-0.01)^x, pch=19, col='green'); lines(x1, exp(-0.01*x1), col='green') # messy but works
 
@@ -191,8 +193,9 @@ generation before mutating, we can write:
 
 \begin{align*}
   P(\textrm{coal. in any generation \& no mutations}) &\approx P(\textrm{coal. in} \; t=1 \; \textrm{\& no mutations}) \; + \\ 
-  P(\textrm{coal. in} \; t=2 \; \textrm{\& no mutations}) + \ldots \\
-  &\approx \sum_{t=1}^\infty P(\textrm{coal. in } \; t \; \textrm{generations \& no mutation})
+&  P(\textrm{coal. in} \; t=2 \; \textrm{\& no mutations}) + \ldots \\
+  %P(\textrm{coal. in} \; t=3 \; \textrm{\& no mutations})  +\ldots \\
+  &= \sum_{t=1}^\infty P(\textrm{coal. in } \; t \; \textrm{generations \& no mutation})
 \end{align*}
 %
 which follows from the fact that coalescing in a particular generation is
@@ -201,15 +204,15 @@ mutually exclusive with coalescing in a different generation and basic probabili
 While we could calculate a value for this sum given $N$ and $\mu$, it's
 difficult to get a sense of what's going on with such a complicated expression.
 Here, we turn to a common approximation in population genetics (and all applied
-mathematics), where we assume that $\nicefrac{1}{(2N)} \ll$ and $\mu \ll 1$.
+mathematics), where we assume that $\nicefrac{1}{(2N)} \ll 1$ and $\mu \ll 1$.
 This allows us to approximate the geometric decay as an exponential decay.
 Then, the probability two alleles coalesce in generation $t+1$ and don't mutate
 can be written as:
 %
 \begin{align} P(\textrm{coal. in t+1 \& no mutations}) &\approx \frac{1}{2N}
-\left(1- \frac{1}{2N} \right)^t \left(1-\mu \right)^{2t} \\ & \approx
-\frac{1}{2N} e^{-t/(2N)} e^{-2\mu t } \end{align} \begin{equation} \approx
-\frac{1}{2N} e^{-t(2\mu+1/(2N))} \end{equation}
+\left(1- \frac{1}{2N} \right)^t \left(1-\mu \right)^{2t} \\ 
+& \approx \frac{1}{2N} e^{-t/(2N)} e^{-2\mu t } \\
+&=\frac{1}{2N} e^{-t(2\mu+1/(2N))} \end{align} 
 %
 and then we simply approximate the summation by an integral, giving us:
 %
